openlineage: address dimas-b follow-up review (URI validation, drop realmId, Set.of)
- Validate the schemaURL carries the OpenLineage schema prefix before trusting
  the trailing fragment as the event-type discriminator; otherwise fall back to
  RunEvent. Prevents an arbitrary URL ending in /JobEvent from steering dispatch.
- Drop the redundant realmId from OpenLineageIngestRequest: the ingest call is
  already realm-scoped, so a provider needing realm context can be @RequestScoped
  and inject it. OpenLineageAdapter injects RealmConfig directly again.
- Use Set.of() instead of ImmutableSet.of() in OpenLineageEndpointContributor,
  dropping the Guava import.